[tool.poetry]
name = "high-order-and-partially-applied-functions-in-python-blog-post"
version = "0.1.0"
description = ""
authors = ["yfeltz <y.feltzman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
